--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -122,7 +122,7 @@ ${alignr}v2.0.3${font}${color}
 
 ${goto 12}+-----------------------------------------------------------+
 ${goto 15}|
-${goto 15}|${goto 38}${color2}${uid_name 1000} @${color2}${nodename}${font}${color}
+${goto 12}${color1}+----${uid_name 1000} @${color1}${nodename}${font}${color}
 ${goto 15}|${goto 40}|
 ${goto 15}|${goto 38}+-- ${color2}OS${goto 155}${color4}${sysname}${color}
 ${goto 15}|${goto 38}+-- ${color2}Kernel ${goto 155}${color4}${kernel}${color}
