--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -39,7 +39,7 @@ conky.config = {
 	--Arch Duoscreen
 	--gap_x = -1910,
 	gap_x = 5,
-	gap_y = 5,
+	gap_y = 45,
 	minimum_height = 1500,
 	minimum_width = 230,
 	maximum_width = 260,
@@ -89,7 +89,7 @@ conky.config = {
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	own_window_transparent = no,
 	own_window_title = 'system_conky',
-	own_window_type = 'normal',-- # options are: normal/override/dock/desktop/panel
+	own_window_type = 'desktop',-- # options are: normal/override/dock/desktop/panel
 	
 
 	--Colours
@@ -170,9 +170,9 @@ ${goto 15}|${goto 40}|
 ${goto 15}|${goto 38}+-- ${color2}${goto 63}${nvidia modelname}${color}
 ${goto 15}|${goto 40}|
 ${goto 15}|${goto 38}+-- ${color2}GPU Core${goto 155}${color1}${nvidia gpuutil}% ${color4}- ${nvidia gpufreqcur}Hz${color}
-${goto 15}|${goto 38}+-- ${color2}Memory${goto 155}${color1}${nvidia memutil}% ${color4}- ${nvidia memfreqcur}HZ${color}
+${goto 15}|${goto 38}+-- ${color2}Memory${goto 155}${color4}${nvidia memfreqcur}HZ${color}
 ${goto 15}|${goto 60}+-- ${color2}Total${goto 155}${color4}${nvidia memmax}G${color}
-${goto 15}|${goto 60}+-- ${color2}Used${goto 155}${color4}${nvidia memused}G${color}
+${goto 15}|${goto 60}+-- ${color2}In Use${goto 155}${color4}${nvidia memused}G ${color1}(${nvidia memutil}%)${color}
 ${goto 15}|${goto 60}+-- ${color2}Free${goto 155}${color4}${nvidia memfree}G${color}
 ${goto 15}|${goto 38}+-- ${color2}GPU Temp${goto 155}${color1}${nvidia temp}°C${color}
 ${goto 15}|${goto 38}+-- ${color2}Fan${goto 155}${color1}${nvidia fanlevel}% ${color4}- ${exec nvidia-smi -a|grep -i fan|awk '{print $4}'|xargs -n 1 expr 1800 + }RPM${color}
